feat(reservations): classify instances by timeframe and allow multi-status filtering
Adds a Clock-backed ReservationTimeframeRule that derives UPCOMING/PAST for
every reservation instance from an application-wide, timezone-pinned Clock
bean instead of scattered LocalDate.now()/ZoneId calls, and lets the status
filter accept several ReservInstanceStatus values at once (IN instead of
equality). Together these let the API express queries like "ACTIVE but PAST"
(Finalizada) or "CANCELLED_BY_USER OR CANCELLED_BY_ADMIN" (Cancelada) that
were previously impossible to express in one request.

Co-Authored-By: Daniel Emiliano Hernández Arroyo <20243ds075@utez.edu.mx>
Co-Authored-By: SoyCypex <20243ds027@utez.edu.mx>